Add pi-hole ansible role

--- a/ansible/roles/iface_poller/templates/iface-poller.service.j2
+++ b/ansible/roles/iface_poller/templates/iface-poller.service.j2
@@ -8,9 +8,9 @@ Type=simple
 Restart=always
 RestartSec=5
 User=root
-ExecStart=/usr/bin/env bash {{ home_folder }}/{{ project_folder }}/iface-poller.sh
-StandardOutput=file:{{ home_folder }}/{{ project_folder }}/iface-poller.log
-StandardError=file:{{ home_folder }}/{{ project_folder }}/iface-poller.err.log
+ExecStart=/usr/bin/env bash {{ ansible_env.HOME }}/{{ project_folder }}/iface-poller.sh
+StandardOutput=file:{{ ansible_env.HOME }}/{{ project_folder }}/iface-poller.log
+StandardError=file:{{ ansible_env.HOME }}/{{ project_folder }}/iface-poller.err.log
 
 [Install]
 WantedBy=multi-user.target
