Add dhcp router config for pi-hole

--- a/ansible/roles/pihole/templates/setupVars.conf.j2
+++ b/ansible/roles/pihole/templates/setupVars.conf.j2
@@ -17,3 +17,4 @@ API_PRIVACY_MODE=false
 DHCP_ACTIVE=true
 DHCP_START={{ dhcp_start_ip_range }}
 DHCP_END={{ dhcp_end_ip_range }}
+DHCP_ROUTER={{ ethernet_ip_address }}
